# stuntfree-api

./: .env.example  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  journalling.py  ml.py  ml_services.py  user.py
app/core/: config.py  container.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
app/model/: __init__.py  base_model.py  daily_nutrition_summary.py  food_intake.py  nutrition_log.py  nutrition_log_foods.py  profile.py  user.py
app/repository/: __init__.py  base_repository.py  food_repository.py  nutrition_logs_repository.py  user_repository.py
app/schema/: __init__.py  auth_schema.py  base_schema.py  food_schema.py  user_schema.py
app/service/: __init__.py  auth_service.py  base_service.py  grpc_client.py  journalling_service.py  ml_service.py  user_service.py
app/util/: schema.py  storage.py  strings.py  template.py
migrations/: env.py
migrations/versions/: 32455e768f0f_add_daily_nutrition_summary_tables.py  4ca9be842389_add_born_weight_and_born_height.py  7c19d8f37971_drop_food_intake_tables.py  9fe868f8693b_add_nutrition_logs_tables.py  b71f53763290_add_user_profile_tables.py  fd7c8711fa03_add_user_profile_tables.py  fec954cf6de8_add_food_intake_tables.py
